Bug 1385636 - Auto-downgrade: change <pre> from nsIMsgCompConvertible::Plain to nsIMsgCompConvertible::Altering. r=aceman