mailnews/compose/src/nsMsgCompose.cpp
@@ -5460,10 +5460,11 @@ nsresult nsMsgCompose::TagConvertible(nsIDOMElement *node,  int32_t *_retval)
       return NS_OK;
     }
 
-    if      ( // some "simple" elements without "style" attribute
+    if      ( // Considered convertible to plaintext: Some "simple" elements
+              // without non-convertible attributes like style, class, id,
+              // or align (see above).
               element.LowerCaseEqualsLiteral("br") ||
               element.LowerCaseEqualsLiteral("p") ||
-              element.LowerCaseEqualsLiteral("pre") ||
               element.LowerCaseEqualsLiteral("tt") ||
               element.LowerCaseEqualsLiteral("html") ||
               element.LowerCaseEqualsLiteral("head") ||
@@ -5494,6 +5495,7 @@ nsresult nsMsgCompose::TagConvertible(nsIDOMElement *node,  int32_t *_retval)
               element.LowerCaseEqualsLiteral("h5") ||
               element.LowerCaseEqualsLiteral("h6") ||
               element.LowerCaseEqualsLiteral("hr") ||
+              element.LowerCaseEqualsLiteral("pre") ||
               (
                 mConvertStructs
                 &&
